Decided on a grouping for NaN-Diagnoses

--- a/notebooks/isic_diagnosis.ipynb
+++ b/notebooks/isic_diagnosis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_benign = df[df[\"benign_malignant\"]==\"benign\"]\n",
-    "select_malignant = df[df[\"benign_malignant\"]==\"malignant\"]"
+    "select_benign = df[\n",
+    "    (df[\"benign_malignant\"]==\"benign\") |\n",
+    "    (df[\"benign_malignant\"]==\"indeterminate/benign\") |\n",
+    "    (df[\"benign_malignant\"]==\"indeterminate\")]\n",
+    "select_malignant = df[\n",
+    "    (df[\"benign_malignant\"]==\"malignant\") |\n",
+    "    (df[\"benign_malignant\"]==\"indeterminate/malignant\")]\n",
+    "normalize = False\n",
+    "dropna = False\n",
+    "col = \"diagnosis\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Benign diagnoses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diagnosis\n",
+      "nevus                                 2674\n",
+      "basal cell carcinoma                   315\n",
+      "seborrheic keratosis                   287\n",
+      "acrochordon                            283\n",
+      "actinic keratosis                      230\n",
+      "lentigo NOS                            137\n",
+      "solar lentigo                          109\n",
+      "lichenoid keratosis                     99\n",
+      "squamous cell carcinoma                 49\n",
+      "verruca                                 45\n",
+      "atypical melanocytic proliferation      37\n",
+      "dermatofibroma                          35\n",
+      "vascular lesion                         18\n",
+      "angioma                                 18\n",
+      "lentigo simplex                         14\n",
+      "other                                    8\n",
+      "angiokeratoma                            6\n",
+      "neurofibroma                             5\n",
+      "scar                                     2\n",
+      "pigmented benign keratosis               1\n",
+      "clear cell acanthoma                     1\n",
+      "angiofibroma or fibrous papule           1\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint.pprint(select_benign[col].value_counts(\n",
+    "    normalize=normalize, dropna=dropna))"
    ]
   },
   {
@@ -42,27 +98,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diagnosis\n",
+      "melanoma                              1095\n",
+      "basal cell carcinoma                   418\n",
+      "squamous cell carcinoma                262\n",
+      "melanoma metastasis                     21\n",
+      "seborrheic keratosis                    12\n",
+      "AIMP                                     3\n",
+      "atypical melanocytic proliferation       2\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "pprint.pprint(select_benign[\"diagnosis\"].value_counts(normalize=True))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Malignant diagnoses"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pprint.pprint(select_malignant[\"diagnosis\"].value_counts(normalize=True))"
+    "pprint.pprint(select_malignant[col].value_counts(\n",
+    "    normalize=normalize, dropna=dropna\n",
+    "))"
    ]
   }
  ],
