Added visualization for confusion matrix

--- a/notebooks/isic_diagnosis.ipynb
+++ b/notebooks/isic_diagnosis.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pprint\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,6 +122,53 @@
     "pprint.pprint(select_malignant[col].value_counts(\n",
     "    normalize=normalize, dropna=dropna\n",
     "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Diagnosis confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(os.path.join(root, \"reports\", \"isic\", \"diagnosis\", \"diagnosis-classifier-test.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_7756/1305975368.py:3: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n",
+      "  np.fromstring(conf_mat)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'[[  12    0   17    7    0    6    5    0    1]\\n [   7    0   21    9    0    5    5    0    2]\\n [   9    0   84   15    0   10   18    0    8]\\n [   7    0   24 1516    0   22   56    0    9]\\n [   1    0    2    1    0    3    3    0    2]\\n [   4    0   11   21    0   97   89    0    0]\\n [   4    0    4   44    0   24  461    0    0]\\n [   3    0    8   14    0   15   12    0    1]\\n [   2    0   22    7    0    5    4    0   11]]'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conf_mat = df[\"MulticlassConfusionMatrix\"].iloc[-1]\n",
+    "# np.reshape(np.fromstring(conf_mat), (9,9))\n",
+    "np.fromstring(conf_mat)\n",
+    "conf_mat"
    ]
   }
  ],
